--- a/client/index.html
+++ b/client/index.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;300;400;500;600;700;800;900&family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;1,600&family=Nunito:wght@400;500;600;700&family=Play:wght@400;700&family=Roboto:wght@300;400;500;600;700&family=Ubuntu+Mono&display=swap" rel="stylesheet">
+
     <title>SmolCassonne</title>
   </head>
-  <body>
+  <body class="overflow-hidden">
     <div id="app"></div>
     <script type="module" src="/src/index.tsx"></script>
   </body>
